dark mode fixes

--- a/public_files/static_css/blackmode.css
+++ b/public_files/static_css/blackmode.css
@@ -46,6 +46,7 @@
     --hiring-now:url(/public_files/images/about_us/about_career_top_banner.jpg);
     --mt5-background:url(/public_files/images/platforms/MT5Plarform_topbanner.png);
     --st-faq-background:url(/public_files/images/social_trading/st_earn_money_bg.jpg);
+    --live-account-banner:url(/public_files/images/accounts_funding/live_account_top_banner.jpg);
     --border-color: #ccc;
     --color-737576: #e4e7e9;
     --choose-next-background-color: black;
@@ -113,6 +114,7 @@
     --hiring-now:url(/public_files/images/about_us/about_career_top_banner_dark.png);
     --mt5-background:url(/public_files/images/platforms/MT5Plarform_topbanner_dark.png);
     --st-faq-background:url(/public_files/images/social_trading/st_earn_money_bg_dark.png);
+    --live-account-banner:url(/public_files/images/accounts_funding/live_account_top_banner_dark.png);
     --color-737576: #737576;
     --choose-next-background-color: white;
     --trader-color: white;
@@ -12438,4 +12440,10 @@ table.dataTable tr:nth-of-type(odd) {
     background-color: #202347;
     min-height: 100px !important;
     margin: 0px 5px;
+}
+
+
+/* new updates and fixes */
+.live-account-banner{
+    background: var(--lieve-account-banner) no-repeat 100%;
 }
